--- a/base/build.gradle
+++ b/base/build.gradle
@@ -29,14 +29,44 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     testCompile 'junit:junit:4.12'
 
-
     // dependencies
 
-    // retrofit and okHTTP
+    // Retrofit for rest client
+    // https://github.com/square/retrofit
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
 
+    // OkHttp logging interceptor
+    // https://github.com/square/okhttp/wiki/Interceptors
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+
+    // RxAndroid
+    // https://github.com/ReactiveX/RxAndroid
+    // https://github.com/ReactiveX/RxJava
+    // https://github.com/ReactiveX/RxJavaJoins
+    compile 'io.reactivex:rxandroid:1.2.1'
+
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
+    compile 'io.reactivex:rxjava:1.1.6'
+
+    // Rx Life Cycle
+    // https://github.com/trello/RxLifecycle
+    compile 'com.trello:rxlifecycle:0.6.1'
+    compile 'com.trello:rxlifecycle-components:0.6.1'
+
+    // RxBinding
+    // https://github.com/JakeWharton/RxBinding
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    compile 'com.jakewharton.rxbinding:rxbinding-support-v4:0.4.0'
+    compile 'com.jakewharton.rxbinding:rxbinding-recyclerview-v7:0.4.0'
+
+
+    //Butterknife
+    compile 'com.jakewharton:butterknife:8.2.1'
+
+    // spots-dialog
+    // https://github.com/d-max/spots-dialog
+    compile 'com.github.d-max:spots-dialog:0.4@aar'
 }
